PyMaker/datas/object2/RawHTML/Python_DOC_referPages.why-is-this-code-getting-invalid-syntax-error.txt
<div class="post-text" itemprop="text">
<pre><code>def compare(A: object, B: object) -&gt; object:
    if(A&gt;B):
        return A
    elif(A&lt;B):
        return B
    else:
        return A


if __name__ == "__main__":
    A = int(input())
    scorelist = []

    for i in range(0,A):
        tmp = int(input())
        scorelist.append(tmp)

    sum =+ int(scorelist[0])
    k = 1
    for j in A-2:
        D = compare(scorelist[k],scorelist[k+1]
        k = scorelist.index(D)
        sum =+ D


    print (sum)
    print(scorelist)

</code></pre>
<p><code>scorelist</code> is unresolved reference and I don't know why I cannot use "<code>k</code>".</p>
<pre><code>   line 22
    k = scorelist.index(D)
    ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You're missing a closing bracket:</p>
<pre><code>def compare(A: object, B: object) -&gt; object:
    if(A&gt;B):
        return A
    elif(A&lt;B):
        return B
    else:
        return A


if __name__ == "__main__":
    A = int(input())
    scorelist = []

    for i in range(0,A):
        tmp = int(input())
        scorelist.append(tmp)

    sum =+ int(scorelist[0])
    k = 1
    for j in A-2:
        D = compare(scorelist[k],scorelist[k+1])
        k = scorelist.index(D)
        sum =+ D


    print (sum)
    print(scorelist)
</code></pre>
</div>
<span class="comment-copy">You're missing a close brace at the end of <code>compare(scorelist[k],scorelist[k+1]</code>. Voting to close as a typo.</span>
<span class="comment-copy">Just to be clear, it's the closing parenthesis that you are missing. <code>compare(scorelist[k],scorelist[k+1]</code> should be <code>compare(scorelist[k],scorelist[k+1])</code>.</span>
<span class="comment-copy">Unbalanced parentheses <code>:)</code></span>
<span class="comment-copy"><a href="http://level1wiki.wikidot.com/syntax-error" rel="nofollow noreferrer">level1wiki.wikidot.com/syntax-error</a> lists some common syntax errors, though not this one. Someone please provide a better link if you know :)</span>
<span class="comment-copy">@dani re <code>why can I not use k</code>: actually you can; what you see is <b>compiler</b> (code parser) giving you an imprecise error. This is by the nature of how they work, compiler "eats" code until it can't and then "barfs". In this case, the error is immediately before <code>k</code>. Compiler ignores whitespace, thus the error is at the end of the previous line. This is rather common, in many programming languages. Mnemonic — when compiler barfs, look at what it ate last.</span>
